# claudecode-workspace

./: .gitignore
Automation_Script/: pyproject.toml  配置免密登录.txt
Automation_Script/ows_shell/: start.sh
claude_1/: .gitignore  pyproject.toml
claude_1/js逆向/: readme.md
claude_1/翻译/: aa.md  readme.md
claude_3/: prompt_log.txt  pyproject.toml
claude_3/.claude/: mcp.json  settings.json
claude_4/: pyproject.toml  skills-lock.json  test_nebula.py
claude_4/.claude/: CLAUDE.md
claude_4/nebula-mcp-server/: .env.example  README.md  pyproject.toml  settings.example.json
claude_4/nebula-mcp-server/src/nebula_mcp/: __init__.py  server.py
claude_5/: pyproject.toml
claude_auto/: .gitignore  README.md  config.yaml  config_back.yaml  main.py  package-lock.json  package.json  requirements.txt
claude_test/: .gitignore  collect_reviews.js  package-lock.json  package.json  tmall_reviews_100.csv
stock_platform/: redme.md  提示词.md
stock_platform/python/backend/python/: database.py  main.py  pyproject.toml  seed_data.py
stock_platform/python/backend/python/core/: errors.py  logging.py  pagination.py
stock_platform/python/backend/python/middleware/: __init__.py
stock_platform/python/backend/python/models/: __init__.py
stock_platform/python/backend/python/routers/: __init__.py  accounts.py  dividends.py  positions.py  statistics.py  stock_prices.py  trades.py
stock_platform/python/backend/python/schemas/: __init__.py
stock_platform/python/backend/python/services/: __init__.py  account_service.py  dividend_service.py  position_service.py  statistics_service.py  stock_price_service.py  trade_service.py
uv-mono-demo/: .gitignore  README.md  pyproject.toml
uv-mono-demo/apps/cli-tool/: pyproject.toml
uv-mono-demo2/: README.md  pyproject.toml
uv-mono-demo2/service_b/: pyproject.toml
uv-mono-demo2/service_b/src/service_b/: __init__.py  main.py
(+238 files in other folders)
