[project]
name = "nebula-mcp-server"
version = "1.0.0"
description = "NebulaGraph MCP 服务器 - 通过 SSH 跳板机连接数据库"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nebula-mcp-server = "nebula_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nebula_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]