[project]
name = "service-b"
version = "0.1.0"
description = "业务项目 B — 同时依赖 core 和 service-a"
requires-python = ">=3.10"
packages = [{ include = "service_b", from = "src" }]

dependencies = ["core", "service-a"]

[tool.uv.sources]
core = { workspace = true }
service-a = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"
